[package]
name = "evm-simulator"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "0.2.0", features = [
  "network",
  "transports",
  "rpc-types",
  "provider-trace-api",
  "serde",
] }
anyhow = "1.0.79"
dotenv = "0.15.0"
foundry-fork-db = "0.2.0"
revm = "12.1.0"
tokio = { version = "1.38.0", default-features = false, features = [
  "rt-multi-thread",
  "time",
] }
tracing = "0.1.40"
url = "2.4.1"
